Added harness forecaster
